adv search overlap fix

--- a/search-app/front-end/src/assets/sass/app.css
+++ b/search-app/front-end/src/assets/sass/app.css
@@ -248,7 +248,7 @@ main {
   border: 1px solid #a69f9f;
   border-radius: 4px;
   box-shadow: 0 2px 5px #4a4a4a;
-  z-index: 1000;
+  /*z-index: 1000;*/
   width: 100%;
   padding: 24px;
 }
